--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -22,11 +22,12 @@ jobs:
       - name: Generate content & Build (Angular)
         run: npm run build:prod
 
-      - name: Log in to Docker Hub
+      - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build & Push
         uses: docker/build-push-action@v6
@@ -34,5 +35,5 @@ jobs:
           context: .
           push: true
           tags: |
-            docker.io/${{ secrets.DOCKERHUB_USERNAME }}/blog-site:latest
-            docker.io/${{ secrets.DOCKERHUB_USERNAME }}/blog-site:${{ github.sha }}
+            ghcr.io/${{ github.repository_owner }}/blog-site:latest
+            ghcr.io/${{ github.repository_owner }}/blog-site:${{ github.sha }}
