--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -22,12 +22,11 @@ jobs:
       - name: Generate content & Build (Angular)
         run: npm run build:prod
 
-      - name: Log in to GitHub Container Registry
+      - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build & Push
         uses: docker/build-push-action@v6
@@ -35,5 +34,5 @@ jobs:
           context: .
           push: true
           tags: |
-            ghcr.io/${{ github.repository_owner }}/blog-site:latest
-            ghcr.io/${{ github.repository_owner }}/blog-site:${{ github.sha }}
+            docker.io/${{ secrets.DOCKERHUB_USERNAME }}/blog-site:latest
+            docker.io/${{ secrets.DOCKERHUB_USERNAME }}/blog-site:${{ github.sha }}
