Revert to Docker Hub with DOCKERHUB_USERNAME and DOCKERHUB_TOKEN secrets

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -14,8 +14,8 @@ on:
     - cron: '0 2 * * *'
 
 env:
-  REGISTRY: ghcr.io
-  IMAGE_NAME_BLOG: ${{ github.repository }}/blog-site
+  REGISTRY: docker.io
+  IMAGE_NAME_BLOG: sudhan03/blog-site
   BLOG_REPO: Sudhan30/my-blog-site-sudhanverse
 
 jobs:
@@ -42,12 +42,11 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
     
-    - name: Log in to GitHub Container Registry
+    - name: Log in to Docker Hub
       uses: docker/login-action@v3
       with:
-        registry: ghcr.io
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
     
     - name: Get blog repository info
       id: blog-info
@@ -79,7 +78,7 @@ jobs:
     - name: Update blog deployment manifest
       run: |
         echo "📝 Updating blog deployment manifest with new image..."
-        sed -i "s|image: ghcr.io/.*/blog-site:.*|image: ghcr.io/${{ github.repository }}/blog-site:blog-${{ steps.blog-info.outputs.commit_sha }}|g" clusters/prod/apps/blog/deployment.yaml
+        sed -i "s|image: docker.io/sudhan03/blog-site:.*|image: docker.io/sudhan03/blog-site:blog-${{ steps.blog-info.outputs.commit_sha }}|g" clusters/prod/apps/blog/deployment.yaml
         
         # Commit and push the updated manifest
         git config --local user.email "action@github.com"
