--- a/nginx.conf
+++ b/nginx.conf
@@ -7,6 +7,11 @@ server {
   add_header X-Content-Type-Options nosniff;
   add_header Referrer-Policy strict-origin-when-cross-origin;
 
+  # Handle Angular routes - ensure /post/ routes go to Angular app
+  location /post/ {
+    try_files $uri $uri/ /index.html;
+  }
+
   location / {
     try_files $uri $uri/ /index.html;
   }
