--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -62,7 +62,6 @@ jobs:
       run: |
         cd blog-source
         echo "commit_sha=$(git rev-parse HEAD)" >> $GITHUB_OUTPUT
-        echo "commit_message=$(git log -1 --pretty=%B)" >> $GITHUB_OUTPUT
         echo "branch=$(git rev-parse --abbrev-ref HEAD)" >> $GITHUB_OUTPUT
     
     - name: Build and push blog image
@@ -80,7 +79,7 @@ jobs:
           org.opencontainers.image.source=https://github.com/${{ env.BLOG_REPO }}
           org.opencontainers.image.version=${{ steps.blog-info.outputs.commit_sha }}
           org.opencontainers.image.created=${{ github.event.head_commit.timestamp }}
-          org.opencontainers.image.revision=${{ steps.blog-info.outputs.commit_message }}
+          org.opencontainers.image.revision=${{ steps.blog-info.outputs.commit_sha }}
         cache-from: type=gha
         cache-to: type=gha,mode=max
     
