--- a/package.json
+++ b/package.json
@@ -1,36 +1,17 @@
 {
-  "name": "blog-site",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "start": "ng serve",
-    "build": "ng build",
-    "build:prod": "npm run generate:content && ng build --configuration production",
-    "generate:content": "node scripts/generate.js",
-    "test": "ng test"
-  },
-  "dependencies": {
-    "@angular/animations": "^18.2.0",
-    "@angular/cdk": "^18.2.14",
-    "@angular/common": "^18.2.0",
-    "@angular/compiler": "^18.2.0",
-    "@angular/core": "^18.2.0",
-    "@angular/forms": "^18.2.0",
-    "@angular/material": "^18.2.14",
-    "@angular/platform-browser": "^18.2.0",
-    "@angular/platform-browser-dynamic": "^18.2.0",
-    "@angular/router": "^18.2.0",
-    "gray-matter": "^4.0.3",
-    "marked": "^12.0.2",
-    "rxjs": "^7.8.0",
-    "tslib": "^2.6.2",
-    "zone.js": "^0.14.0"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "^18.2.0",
-    "@angular/cli": "^18.2.0",
-    "@angular/compiler-cli": "^18.2.0",
-    "@types/node": "^20.11.0",
-    "typescript": "~5.5.0"
-  }
+    "name": "sudhanverse-bun-blog",
+    "version": "1.0.0",
+    "private": true,
+    "scripts": {
+        "dev": "bun run --watch server/index.ts",
+        "start": "bun run server/index.ts",
+        "build": "bun build server/index.ts --outdir dist --target bun"
+    },
+    "dependencies": {
+        "marked": "^12.0.2",
+        "gray-matter": "^4.0.3"
+    },
+    "devDependencies": {
+        "@types/bun": "latest"
+    }
 }
